# MIA_Diciembre_2021

./: Analizador.cpp  Analizador.h  CMakeLists.txt  Comandos.cpp  Comandos.h  Estructuras.cpp  Estructuras.h  Fdisco.cpp  Globales.h  MKdisco.cpp  MKdisco.h  Mkfs.cpp  Mount.cpp  Mount.h  README.md  RMdisco.cpp  RMdisco.h  Reportes.cpp  main.cpp
Practica/: Readme.md  base_de_datos.sql  carga_masiva.sql  carga_tablas.sql  configuracion.sql  consultas.sql  ejecutable.sh  eliminacion_tablas.sql  tablas_temporales.sql
Proyecto_1/: Analizador.cpp  Comandos.cpp  Estructuras.cpp  Fdisco.cpp  Fdisco.h  Globales.cpp  MKdisco.cpp  Mkfs.cpp  Mkfs.h  RMdisco.cpp  RMdisco.h  Reportes.cpp  Reportes.h
