cmake_minimum_required(VERSION 3.21)
project(Proyecto_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Proyecto_1 main.cpp Analizador.cpp Analizador.h Estructuras.cpp Estructuras.h MKdisco.cpp MKdisco.h RMdisco.cpp RMdisco.h Fdisco.cpp Fdisco.h Mount.cpp Mount.h Mkfs.cpp Mkfs.h Comandos.cpp Comandos.h Globales.cpp Globales.h Reportes.cpp Reportes.h)
